fixed double scroll issue.

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,7 +28,6 @@ img {
   width: 100%;
 }
 
-html,
 body {
   overflow-x: hidden;
 }
